--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,20 @@ include = [
 
 [tool.hatch.version]
 path = "turbobt/__version__.py"
+
+[tool.ruff.lint]
+# TODO add D
+select = [
+    "E", "F", "I", "UP", "S",
+    "TC005",
+]
+ignore = [
+    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
+    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
+    "E501", # TODO: remove E501 once docstrings are formatted
+    "S101", "S108", "S603", "S607",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+"**/test*/**.py" = ["D", "F403", "F405", "S106", "S311"]
