--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
-    "bittensor-commit-reveal~=0.3.1",
+    "bittensor-drand~=1.0.0",
     "bittensor-wallet~=3.0.4",
     "httpx~=0.26.0",
     "scalecodec~=1.2.11",
