--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       draft: ${{ steps.get-version.outputs.draft }}
+    defaults:
+      run:
+        working-directory: ./turbobt
     steps:
       - uses: actions/checkout@v4
         with:
@@ -35,6 +38,9 @@ jobs:
   # Job for Python package publishing
   publish-python:
     needs: get-version
+    defaults:
+      run:
+        working-directory: ./turbobt
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     permissions:
