--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["hatchling >= 1.26"]
-build-backend = "hatchling.build"
-
 [project]
 name = "turbobt"
 description = "A next generation Bittensor SDK, for Python 3."
@@ -46,15 +42,16 @@ dev = [
     "ruff",
 ]
 
-[tool.hatch.version]
-path = "turbobt/__version__.py"
+[build-system]
+requires = ["pdm-backend==2.4.3"]
+build-backend = "pdm.backend"
 
-[tool.hatch.build.targets.sdist]
-include = [
-    "/README.md",
-    "/tests",
-    "/turbobt",
-]
+[tool.pdm]
+distribution = true
+
+[tool.pdm.build]
+includes = ["turbobt"]
+
 
 [tool.ruff.lint]
 # TODO add D
