--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,10 +68,10 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
-          packages-dir: turbobt/dist/
+          packages-dir: dist/
 
       - name: Publish distribution 📦 to PyPI
         if: ${{ needs.get-version.outputs.draft == 'false' }}
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: turbobt/dist/
+          packages-dir: dist/
